--- a/src/pages/buyerRequirements/buyerSpecific.css
+++ b/src/pages/buyerRequirements/buyerSpecific.css
@@ -5,6 +5,6 @@
     margin-bottom: 0 !important; 
     font-size: 14px;
 }
-.buyerSpecific p{
+.buyerSpecific .container p{
     font-size: 14px !important;
 }
