--- a/src/pages/services/Service.css
+++ b/src/pages/services/Service.css
@@ -5,7 +5,7 @@
     border-top-width: 3px;
     margin-left: 10px;
 }
-.agentForm input,.agentForm textarea{
+.agentForm input,.agentForm textarea,.agentForm select{
     width: 100%;
     margin: 10px 0;
     padding: 5px 10px;
