--- a/src/modal/assets/Modals.css
+++ b/src/modal/assets/Modals.css
@@ -51,3 +51,8 @@ border-right: 1px dashed gray;
 .resetPassword label{
     font-size: 14px !important;
 }
+
+.registerform label{
+    margin: 0;
+    font-size: 14px;
+}
