popup added to all forms foreget pass completed

--- a/src/pages/produtDetail/productDetail.css
+++ b/src/pages/produtDetail/productDetail.css
@@ -1,6 +1,10 @@
 .produtDetail p{
    font-size: 13px !important; 
 }
+.produtDetail .detailImage{
+  object-fit: cover;
+  height: 400px;
+}
 .produtDetail .slider img{
     object-fit:cover;
     height: 80px;
