--- a/src/modal/assets/Modals.css
+++ b/src/modal/assets/Modals.css
@@ -2,6 +2,16 @@
 .modal{
     --bs-modal-width: 60vw;
     }
+    
+.modal.popup{
+    --bs-modal-width: 400px;
+
+    }
+    .modal.popup .modal-dialog {
+        margin-right: 10px;
+        margin-top: -110px;
+    }
+
     .modal-content {
         border-radius: 30px;
         overflow: hidden;
