--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@ a{
 .bg-secondary{
     background-color: #e0e0e08f !important;
 }
+.bg-secondary-dark{
+    background-color: rgba(224, 224, 224,.8) !important;
+}
 .box-shadow{
     box-shadow: 0px 0px 10px rgb(136, 136, 136)
 }
